syntax = "proto3";

package antelope.block.v1;

import "google/protobuf/timestamp.proto";

message BlockMeta {
  uint32 block_num = 1;
  string block_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  uint32 trx_count = 10;
}